--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-github-calendar": "^4.0.1",
     "react-icons": "^4.11.0",
     "react-parallax-tilt": "^1.7.169",
+    "react-particles": "^2.12.2",
     "react-pdf": "^7.4.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.12.2",
+    "tsparticles-engine": "^2.12.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^3.5.0"
   },
